[project]
name = "ukraine-air-raid-analysis"
version = "0.1.0"
description = "Time series analysis of Ukrainian air raid alert data"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "prophet>=1.1",
    "plotly>=5.20",
    "streamlit>=1.35",
    "hmmlearn>=0.3",
    "ruptures>=1.1",
    "requests>=2.31",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ipykernel>=6.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ukraine_alerts"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
