[project]
name = "ukraine-air-raid-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastparquet>=2026.5.0",
    "hmmlearn>=0.3.3",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "prophet>=1.3.0",
    "pyarrow>=24.0.0",
    "requests>=2.34.2",
    "ruptures>=1.1.10",
    "scikit-learn>=1.9.0",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]
